<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="HMI_Crush_Indicator" Id="{2a3636d1-b05b-4fb3-9c6d-842facab1bce}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM HMI_Crush_Indicator
VAR
	dwCrushFlag: DWORD;
	bCrushFlag: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF GV_LIFT.CRUSH_PROTECTION_INDICATOR_IN THEN
	dwCrushFlag := GV_HMI.dwGreen;
	bCrushFlag := FALSE;
ELSE dwCrushFlag := GV_HMI.dwRed;
	bCrushFlag := TRUE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="HMI_Crush_Indicator">
      <LineId Id="6" Count="1" />
      <LineId Id="10" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>